[package]
name = "gir"
version = "0.0.1"
authors = [
	"Evgenii Pashkin <eapashkin@gmail.com>",
	"Gleb Kozyrev <gleb@gkoz.com>",
	"Guillaume Gomez <guillaume1.gomez@gmail.com>",
]
build = "build.rs"
exclude = ["Gir*.toml", "tests/**/*", "*.md"]

[dependencies]
docopt = "1.0"
xml-rs = "0.8"
toml = "0.4"
env_logger = "0.5"
git2 = { version = "0.7", default-features = false }
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
hprof = "0.1"
rustdoc-stripper = { git = "https://github.com/GuillaumeGomez/rustdoc-stripper" }

[build-dependencies]
git2 = { version = "0.7", default-features = false }

[profile.release]
codegen-units = 4

[[bin]]
name = "gir"
path = "src/main.rs"

[lib]
name = "libgir"
path = "src/lib.rs"
