
[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.4"
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
v2_10 = ["v2_9_4"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_7_4 = []
v2_7_90 = ["v2_7_4"]
v2_8 = ["v2_7_90"]
v2_9_3 = ["v2_8"]
v2_9_4 = ["v2_9_3"]

[lib]
name = "atk_sys"

[package]
build = "build.rs"
links = "atk"
name = "atk-sys"
version = "0.2.0"
