[build-dependencies]
pkg-config = "0.3.7"
system-deps = "2.0"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []
v2_10 = ["v2_9_4"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_7_4 = []
v2_7_90 = ["v2_7_4"]
v2_8 = ["v2_7_90"]
v2_9_3 = ["v2_8"]
v2_9_4 = ["v2_9_3"]
v2_30 = ["v2_14"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]

[lib]
name = "atk_sys"

[package]
build = "build.rs"
links = "atk"
name = "atk-sys"
version = "0.2.0"
edition = "2018"
[package.metadata.system-deps.atk]
name = "atk"
version = "2.4"

[package.metadata.system-deps.atk.v2_7_4]
version = "2.7.4"

[package.metadata.system-deps.atk.v2_7_90]
version = "2.7.90"

[package.metadata.system-deps.atk.v2_8]
version = "2.8"

[package.metadata.system-deps.atk.v2_9_3]
version = "2.9.3"

[package.metadata.system-deps.atk.v2_9_4]
version = "2.9.4"

[package.metadata.system-deps.atk.v2_10]
version = "2.10"

[package.metadata.system-deps.atk.v2_12]
version = "2.12"

[package.metadata.system-deps.atk.v2_14]
version = "2.14"

[package.metadata.system-deps.atk.v2_30]
version = "2.30"

[package.metadata.system-deps.atk.v2_32]
version = "2.32"

[package.metadata.system-deps.atk.v2_34]
version = "2.34"
[package.metadata.docs.rs]
features = ["dox"]

[dev-dependencies]
shell-words = "1.0.0"
