[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []
v2_28 = []
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_36 = ["v2_32"]

[lib]
name = "gdk_pixbuf_sys"

[package]
build = "build.rs"
links = "gdk_pixbuf"
name = "gdk-pixbuf-sys"
version = "0.2.0"
