
[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
bitflags = "0.4"
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
path = "../gdk-pixbuf-sys"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dependencies.pango-sys]
path = "../pango-sys"

[features]
"3.10" = ["3.8"]
"3.12" = ["3.10"]
"3.14" = ["3.12"]
"3.16" = ["3.14"]
"3.6" = []
"3.8" = ["3.6"]

[lib]
name = "gdk_sys"

[package]
build = "build.rs"
links = "gdk"
name = "gdk-sys"
version = "0.2.0"
