[build-dependencies]
pkg-config = "0.3.12"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []
v2_34 = []
v2_36 = ["v2_34"]
v2_38 = ["v2_36"]
v2_40 = ["v2_38"]
v2_42 = ["v2_40"]
v2_44 = ["v2_42"]
v2_46 = ["v2_44"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_52 = ["v2_50"]
v2_54 = ["v2_52"]

[lib]
name = "gio_sys"

[package]
build = "build.rs"
links = "gio"
name = "gio-sys"
version = "0.2.0"
