[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
bitflags = "2.2"
libc = "0.2"

[dependencies.atk]
package = "atk-sys"
path = "../atk-sys"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
path = "../gdk-pixbuf-sys"

[dependencies.gdk]
package = "gdk-sys"
path = "../gdk-sys"

[dependencies.gio]
package = "gio-sys"
path = "../gio-sys"

[dependencies.glib]
package = "glib-sys"
path = "../glib-sys"

[dependencies.gobject]
package = "gobject-sys"
path = "../gobject-sys"

[dependencies.pango]
package = "pango-sys"
path = "../pango-sys"

[features]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_22_6 = ["v3_22"]
v3_6 = []
v3_8 = ["v3_6"]
v3_22_26 = ["v3_22_6"]
v3_22_27 = ["v3_22_26"]
v3_22_29 = ["v3_22_27"]
v3_22_30 = ["v3_22_29"]
v3_24 = ["v3_22_30"]
v3_24_8 = ["v3_24"]
v3_24_9 = ["v3_24_8"]

[lib]
name = "gtk_sys"

[package]
build = "build.rs"
name = "gtk-sys"
version = "0.2.0"
edition = "2021"
[package.metadata.system-deps."gtk+_3_0"]
name = "gtk+-3.0"
version = "3.4"

[package.metadata.system-deps."gtk+_3_0".v3_6]
version = "3.6"

[package.metadata.system-deps."gtk+_3_0".v3_8]
version = "3.8"

[package.metadata.system-deps."gtk+_3_0".v3_10]
version = "3.10"

[package.metadata.system-deps."gtk+_3_0".v3_12]
version = "3.12"

[package.metadata.system-deps."gtk+_3_0".v3_14]
version = "3.14"

[package.metadata.system-deps."gtk+_3_0".v3_16]
version = "3.16"

[package.metadata.system-deps."gtk+_3_0".v3_18]
version = "3.18"

[package.metadata.system-deps."gtk+_3_0".v3_20]
version = "3.20"

[package.metadata.system-deps."gtk+_3_0".v3_22]
version = "3.22"

[package.metadata.system-deps."gtk+_3_0".v3_22_6]
version = "3.22.6"

[package.metadata.system-deps."gtk+_3_0".v3_22_26]
version = "3.22.26"

[package.metadata.system-deps."gtk+_3_0".v3_22_27]
version = "3.22.27"

[package.metadata.system-deps."gtk+_3_0".v3_22_29]
version = "3.22.29"

[package.metadata.system-deps."gtk+_3_0".v3_22_30]
version = "3.22.30"

[package.metadata.system-deps."gtk+_3_0".v3_24]
version = "3.24"

[package.metadata.system-deps."gtk+_3_0".v3_24_8]
version = "3.24.8"

[package.metadata.system-deps."gtk+_3_0".v3_24_9]
version = "3.24.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
