[build-dependencies]
pkg-config = "0.3.7"
system-deps = "2.0"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []
v1_31 = []
v1_32 = ["v1_31"]
v1_32_4 = ["v1_32"]
v1_34 = ["v1_32_4"]
v1_36_7 = ["v1_34"]
v1_38 = ["v1_36_7"]
v1_42 = ["v1_38"]
v1_44 = ["v1_42"]
v1_46 = ["v1_44"]

[lib]
name = "pango_sys"

[package]
build = "build.rs"
links = "pango"
name = "pango-sys"
version = "0.2.0"
edition = "2018"
[package.metadata.system-deps.pango]
name = "pango"
version = "1.30"

[package.metadata.system-deps.pango.v1_31]
version = "1.31"

[package.metadata.system-deps.pango.v1_32]
version = "1.32"

[package.metadata.system-deps.pango.v1_32_4]
version = "1.32.4"

[package.metadata.system-deps.pango.v1_34]
version = "1.34"

[package.metadata.system-deps.pango.v1_36_7]
version = "1.36.7"

[package.metadata.system-deps.pango.v1_38]
version = "1.38"

[package.metadata.system-deps.pango.v1_42]
version = "1.42"

[package.metadata.system-deps.pango.v1_44]
version = "1.44"

[package.metadata.system-deps.pango.v1_46]
version = "1.46"
[package.metadata.docs.rs]
features = ["dox"]

[dev-dependencies]
shell-words = "1.0.0"
