[build-dependencies]
pkg-config = "0.3.12"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []

[lib]
name = "secret_sys"

[package]
build = "build.rs"
links = "secret"
name = "secret-sys"
version = "0.2.0"
