[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[features]
dox = []
v0_18_6 = []
v0_19 = ["v0_18_6"]

[lib]
name = "secret_sys"

[package]
build = "build.rs"
links = "secret"
name = "secret-sys"
version = "0.2.0"
[package.metadata.system-deps.libsecret_1]
name = "libsecret-1"
version = "0.0"

[package.metadata.system-deps.libsecret_1.feature-versions]
v0_18_6 = "0.18.6"
v0_19 = "0.19"
[package.metadata.docs.rs]
features = ["dox"]

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
